[project]
name = "hello-chainlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit==2.9.6",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "ty>=0.0.19",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "ALL"
]

ignore = [
    "ANN204",  # Missing type annotation for self in method
    "E402",  # Module level import not at top of file
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the first line
    "COM812",  # Missing docstring in public method
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D107",  # Missing docstring in __init__
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "D104",  # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"
